--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.1",
+    "@mui/material": "^5.14.8",
+    "@tailwindcss/forms": "^0.5.0",
+    "@tailwindcss/typography": "^0.5.2",
     "ace-builds": "^1.24.1",
+    "autoprefixer": "10.4.15",
     "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
-    "path": "^0.12.7",
-    "react-ace": "^10.1.0",
-    "autoprefixer": "10.4.15",
+    "mui": "^0.0.1",
     "next": "13.4.19",
+    "path": "^0.12.7",
     "postcss": "8.4.29",
     "react": "18.2.0",
+    "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "^3.0.23"
   }
 }
