--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "ace-builds": "^1.24.1",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
     "mui": "^0.0.1",
