--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.1",
     "@mui/material": "^5.14.8",
@@ -19,6 +20,7 @@
     "autoprefixer": "10.4.15",
     "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
+    "lucide-react": "^0.274.0",
     "mui": "^0.0.1",
     "next": "13.4.19",
     "path": "^0.12.7",
@@ -26,6 +28,7 @@
     "react": "18.2.0",
     "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "tailwindcss": "^3.0.23"
   }
 }
