--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "tailwindcss": "^3.0.23"
   }
 }
