--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "axios": "^1.5.0",
     "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
+    "js-beautify": "^1.14.9",
+    "langchain": "^0.0.146",
     "lucide-react": "^0.274.0",
     "mui": "^0.0.1",
     "next": "13.4.19",
@@ -30,6 +32,10 @@
     "react-ace": "^10.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
+    "react-modal": "^3.16.1",
     "tailwindcss": "^3.0.23"
+  },
+  "devDependencies": {
+    "prettier": "^2.4.1"
   }
 }
