--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,13 +13,16 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.1",
+    "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@mui/x-data-grid": "^6.13.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "ace-builds": "^1.24.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "fs": "^0.0.1-security",
+    "heroicons": "^2.0.18",
     "jquery": "^3.7.1",
     "lucide-react": "^0.274.0",
     "mui": "^0.0.1",
