--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.1",
+    "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
@@ -30,10 +31,10 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-ace": "^10.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
-    "react-modal": "^3.16.1",
-    "tailwindcss": "^3.0.23"
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
