--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "ace-builds": "^1.24.1",
     "axios": "^1.5.0",
+    "codemirror": "^6.0.1",
     "fs": "^0.0.1-security",
     "heroicons": "^2.0.18",
     "jquery": "^3.7.1",
