--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,22 +10,31 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.1",
+    "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "ace-builds": "^1.24.1",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
+    "layout": "^2.2.0",
+    "lucide-react": "^0.274.0",
     "mui": "^0.0.1",
     "next": "13.4.19",
     "path": "^0.12.7",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-ace": "^10.1.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.16.0",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "^3.0.23"
   }
 }
