--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,16 @@
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "^2.1.1",
     "@mui/icons-material": "^5.14.8",
+    "@mui/lab": "^5.0.0-alpha.148",
     "@mui/material": "^5.14.8",
     "@mui/x-data-grid": "^6.13.0",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "ace-builds": "^1.24.1",
+    "antd": "^5.10.0",
     "axios": "^1.5.0",
     "codemirror": "^6.0.1",
+    "framer-motion": "^10.16.4",
     "fs": "^0.0.1-security",
     "heroicons": "^2.0.18",
     "jquery": "^3.7.1",
@@ -32,8 +35,10 @@
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-ace": "^10.1.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-gif-player": "^0.4.2",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1"
   },
