--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@material-tailwind/react": "^2.1.1",
     "@mui/icons-material": "^5.14.8",
     "@mui/material": "^5.14.8",
+    "@mui/x-charts": "^6.0.0-alpha.14",
     "@tailwindcss/forms": "^0.5.0",
     "@tailwindcss/typography": "^0.5.2",
     "ace-builds": "^1.24.1",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
+    "chart.js": "^4.4.0",
     "fs": "^0.0.1-security",
     "jquery": "^3.7.1",
     "layout": "^2.2.0",
@@ -30,6 +32,7 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-ace": "^10.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
